force-app/main/default/objects/Wisdom__c/Wisdom__c.object-meta.xml
<CustomObject>
    <label>Wisdom</label>
    <nameField>
        <label>Wisdom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wisdom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>