force-app/main/default/objects/Wisdom__c/fields/Animal_Handling__c.field-meta.xml
<CustomField>
    <fullName>Animal_Handling__c</fullName>
    <label>Animal Handling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>