force-app/main/default/objects/Wisdom__c/fields/Insight__c.field-meta.xml
<CustomField>
    <fullName>Insight__c</fullName>
    <label>Insight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>