force-app/main/default/objects/Wisdom__c/fields/Medicine__c.field-meta.xml
<CustomField>
    <fullName>Medicine__c</fullName>
    <label>Medicine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>