force-app/main/default/objects/Wisdom__c/fields/Perception__c.field-meta.xml
<CustomField>
    <fullName>Perception__c</fullName>
    <label>Perception</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>