force-app/main/default/objects/Wisdom__c/fields/Stat__c.field-meta.xml
<CustomField>
    <fullName>Stat__c</fullName>
    <formula>Animal_Handling__c +  Insight__c +  Medicine__c +  Perception__c +  Saving_Throws__c +  Survival__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>