force-app/main/default/objects/Wisdom__c/fields/Survival__c.field-meta.xml
<CustomField>
    <fullName>Survival__c</fullName>
    <label>Survival</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>